--- a/app/src/main/res/layout/crop_spraying_list_card.xml
+++ b/app/src/main/res/layout/crop_spraying_list_card.xml
@@ -54,35 +54,38 @@
                 android:id="@+id/txt_view_crop_spraying_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
+                android:textSize="18sp"
                 android:textColor="@color/blackText" />
 
             <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:background="@drawable/crop_card_border"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-              android:padding="4dp"
+                android:background="@drawable/black_border"
+                android:orientation="vertical"
              >
-              <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
-
-                  <TextView
-                      android:id="@+id/txt_view_crop_spraying_card_spray_name"
+                <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:textStyle="bold"
-                      android:text="Weed Control Spray"
-                      android:textColor="@color/blackText" />
+                      android:orientation="horizontal"
+                      android:layout_margin="0dp"
+                      android:padding="8dp">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.9"
+                        android:textSize="18sp"
+                        android:textAlignment="gravity"
+                        android:text="Spraying"
+                        android:textColor="@color/blackText" />
                   <LinearLayout
-                      android:layout_width="wrap_content"
+                      android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:layout_gravity="right"
+                      android:layout_gravity="end"
                       android:layout_weight="0.1"
                       android:orientation="horizontal">
 
@@ -94,18 +97,46 @@
                           android:src="@drawable/more_options_icon" />
                   </LinearLayout>
               </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
 
-              <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_spraying_card_spray_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="14sp"
+                        android:text="Weed Control Spray"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
 
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="Operator : "
-                      android:textStyle="bold"
+                       android:textSize="14sp"
                       android:textColor="@color/blackText"
                        />
 
@@ -116,34 +147,47 @@
                       android:layout_weight="1"
                       android:text="John Kiwanuka"
                       android:textColor="@color/blackText" />
-              </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Rate : "
-                        android:textStyle="bold"
-                        android:textColor="@color/blackText"
-                        />
-
-                    <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_rate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="56kg/ha"
-                        android:textColor="@color/blackText" />
                 </LinearLayout>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Rate : "
+                     android:textSize="14sp"
+                    android:textColor="@color/blackText"
+                    />
+
+                <TextView
+                    android:id="@+id/txt_view_crop_spraying_card_rate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="56kg/ha"
+                    android:textColor="@color/blackText" />
+            </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -153,7 +197,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="W.D : "
-                            android:textStyle="bold"
+                             android:textSize="14sp"
                             android:textColor="@color/blackText"
                             />
                         <TextView
@@ -173,7 +217,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="W.C: "
-                            android:textStyle="bold"
+                             android:textSize="14sp"
                             android:textColor="@color/blackText"
                             />
                         <TextView
@@ -188,17 +232,24 @@
 
 
                 </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Reason : "
-                        android:textStyle="bold"
+                        android:textSize="14sp"
                         android:textColor="@color/blackText"
                         />
                     <TextView
