--- a/app/src/main/res/drawable/black_border.xml
+++ b/app/src/main/res/drawable/black_border.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary" />
+        android:color="@color/black" />
     <solid android:color="@color/White" />
 </shape>
