--- a/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
@@ -126,6 +126,32 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:layout_weight="0.6"
+                        android:text="Seed Type"
+                        android:textColor="@color/colorPrimary"
+                        />
+                    <Spinner
+                        android:id="@+id/sp_crop_seed_type"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.4"
+                        android:inputType="text"
+                        android:hint="Enter.."
+                        android:background="@drawable/input_shapes"
+                        android:entries="@array/seed_inventory_seed_type"
+                        android:textSize="14sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="12dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textSize="16sp" android:textStyle="bold"
                         android:layout_weight="0.6"
                         android:text="Dressing"
