--- a/app/src/main/res/layout/crop_cultivation_list_card.xml
+++ b/app/src/main/res/layout/crop_cultivation_list_card.xml
@@ -55,36 +55,40 @@
                 android:id="@+id/txt_view_crop_cultivation_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
-                android:textColor="@color/blackText" />
+                android:textColor="@color/blackText"
+                android:textSize="18sp"/>
 
             <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:background="@drawable/crop_card_border"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/black_border"
                 android:layout_marginEnd="8dp"
-              android:padding="4dp"
              >
-              <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
 
                   <TextView
-                      android:id="@+id/txt_view_crop_cultivation_card_operation"
                       android:layout_width="0dp"
-                      android:layout_height="match_parent"
-                      android:layout_weight="1"
-                      android:text="Field Preparation"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="0.9"
+                      android:text="Cultivation"
                       android:textColor="@color/blackText"
-                      android:textStyle="bold"/>
+                      android:textSize="18sp"
+                      />
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:gravity="end"
-                      android:layout_weight="0.2"
+                      android:layout_gravity="end"
+                      android:layout_weight="0.1"
                       android:orientation="horizontal">
 
 
@@ -100,17 +104,46 @@
                   </LinearLayout>
               </LinearLayout>
 
-              <LinearLayout
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_cultivation_card_operation"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Field Preparation"
+                        android:textColor="@color/blackText"
+                        android:textSize="14sp"/>
+
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+                  android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
 
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="Operator : "
-                      android:textStyle="bold"
+                        android:textSize="14sp"
                       android:textColor="@color/blackText"
                        />
 
@@ -121,17 +154,24 @@
                       android:layout_weight="1"
                       android:text="50%"
                       android:textColor="@color/blackText" />
-              </LinearLayout>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Cost : "
-                        android:textStyle="bold"
+                        android:textSize="14sp"
                         android:textColor="@color/blackText"
                         />
 
@@ -144,15 +184,17 @@
                         android:text="50000"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:textAlignment="center"
-                android:background="@color/gray_mh" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="vertical">
+                  android:orientation="vertical"
+                  android:layout_margin="0dp"
+                  android:padding="8dp">
                   <TextView
                       android:id="@+id/txt_view_crop_cultivation_card_notes"
                       android:layout_width="match_parent"
