--- a/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
+++ b/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="0dp"
@@ -10,25 +10,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         android:padding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.9"
             android:orientation="vertical">
+
             <View
                 android:layout_width="1dp"
-                android:layout_height="19dp"
-                android:textAlignment="center"
+                android:layout_height="23dp"
                 android:layout_marginStart="16dp"
-                android:background="@color/black" />
+                android:background="@color/black"
+                android:textAlignment="center" />
+
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
@@ -38,10 +40,10 @@
             <View
                 android:id="@+id/txt_view_crop_fertilizer_application_card_line"
                 android:layout_width="1dp"
-                android:layout_height="55dp"
-                android:textAlignment="center"
+                android:layout_height="85dp"
                 android:layout_marginStart="16dp"
-                android:background="@color/black" />
+                android:background="@color/black"
+                android:textAlignment="center" />
 
         </LinearLayout>
 
@@ -49,95 +51,126 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_view_crop_fertilizer_application_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
+                android:textSize="18sp"
                 android:textColor="@color/blackText" />
 
             <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:background="@drawable/crop_card_border"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-              android:padding="4dp"
-             >
+                android:background="@drawable/black_border"
+                android:orientation="vertical">
 
-              <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
-
-                  <TextView
-                      android:id="@+id/txt_view_crop_fertilizer_application_card_operation"
-                      android:layout_width="0dp"
-                      android:layout_height="match_parent"
-                      android:layout_weight="0.1"
-                      android:text="Field Preparation"
-                      android:textColor="@color/blackText"
-                      android:textStyle="bold" />
-
-                  <LinearLayout
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="right"
-                      android:orientation="horizontal">
-
-
-                      <ImageView
-                          android:id="@+id/img_crop_fertilizer_application_card_more"
-                          android:layout_width="24dp"
-                          android:layout_height="24dp"
-                          android:src="@drawable/more_options_icon" />
-                  </LinearLayout>
-              </LinearLayout>
-              <View
-                  android:layout_width="match_parent"
-                  android:layout_height="2dp"
-                  android:background="@color/gray">
-
-              </View>
-              <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
-
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:text="Method : "
-                      android:textStyle="bold"
-                      android:textColor="@color/blackText"
-                       />
-
-                  <TextView
-                      android:id="@+id/txt_view_crop_fertilizer_application_card_method"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:text="50%"
-                      android:textColor="@color/blackText" />
-              </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.9"
+                        android:textSize="18sp"
+                        android:textAlignment="gravity"
+                        android:text="Fertilizer Application"
+                        android:textColor="@color/blackText" />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_weight="0.1"
+                        android:orientation="horizontal">
+
+
+                        <ImageView
+                            android:id="@+id/img_crop_fertilizer_application_card_more"
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:src="@drawable/more_options_icon" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:orientation="horizontal"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_fertilizer_application_card_operation"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:textSize="14sp"
+                        android:text="Field Preparation"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                     />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Method : "
+                        android:textSize="14sp"
+                        android:textColor="@color/blackText" />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_fertilizer_application_card_method"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="50%"
+                        android:textSize="14sp"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                     />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Rate : "
-                        android:textStyle="bold"
-                        android:textColor="@color/blackText"
-                        />
+                        android:textSize="14sp"
+                        android:textColor="@color/blackText" />
 
                     <TextView
                         android:id="@+id/txt_view_crop_fertilizer_application_card_rate"
@@ -145,20 +178,28 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="50%"
+                        android:textSize="14sp"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                   />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_margin="0dp"
+                    android:padding="8dp">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Cost : "
-                        android:textStyle="bold"
-                        android:textColor="@color/blackText"
-                        />
+                        android:textSize="14sp"
+                        android:textColor="@color/blackText" />
 
                     <TextView
                         android:id="@+id/txt_view_crop_fertilizer_application_card_cost"
@@ -166,11 +207,12 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="UGX 467000"
+                        android:textSize="14sp"
                         android:textAlignment="textEnd"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
 
-          </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
